--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -8,11 +8,42 @@
   font-weight: normal;
 }
 
-a,
-.green {
+a {
   text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
+.text-gradient {
+  text-decoration: none;
+  background: linear-gradient(90deg, hsl(324, 86%, 47%), hsl(27, 99%, 55%), hsl(313, 67%, 36%));
+  background-size: 200% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 72px;
+  animation: move-bg 3s linear infinite;
+}
+
+h2 {
+  margin-top: 1.3em;
+}
+
+.text-gradient-reverse {
+  margin-top: 15px;
+  text-decoration: none;
+  background: linear-gradient(90deg, hsl(324, 86%, 47%), hsl(27, 99%, 55%), hsl(313, 67%, 36%));
+  background-size: 200% auto;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: move-bg 3s linear infinite alternate-reverse;
+}
+
+@keyframes move-bg {
+  to {
+    background-position: 200% center;
+  }
 }
 
 @media (hover: hover) {
